[package]
name = "nora"
description = "Freezes the screen for another program"
version = "0.1.0"
authors = ["Jokler <jokler@protonmail.com>"]
repository = "https://github.com/jokler/nora"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["x11", "screenshot"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
xcb = "0.9.0"
structopt = "0.3.17"
anyhow = "1.0.32"
